# turbulence-intensity

./: README.md  app.py  data.py  file.py  plot.py  pyproject.toml  requirements.txt
.github/workflows/: huggingface.yml
turbulence_intensity/: app.py  data.py
