[project]
name = "turbulence-intensity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "numpy>2.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scipy>=1.15.2",
    "streamlit>=1.42.2",
    "numba>=0.61.0",
]

[dependency-groups]
dev = ["jupyter>=1.1.1", "tqdm>=4.67.1", "watchdog>=6.0.0"]
